<resources>
    <string name="textView">This is my layout project</string>
    <string name="TitleText">Layout Project</string>
    <string name="Button1">Button 1</string>
    <string name="Button2">Button 2</string>
    <string name="Button3">Button 3</string>
    <string name="CheckBox1">Check Box 1</string>
    <string name="CheckBox2">Check Box 2</string>
    <string name="CheckBox3">Check Box 3</string>
    <string name="CheckBox4">Check Box 4</string>
    <string name="CheckBox5">Check Box 5</string>
    <string name="CheckBox6">Check Box 6</string>
    <string name="smileImage">smile</string>

</resources>